2024-??-?? - version 19
- #337 - Add blocker if cPanel is not running version 110
- Use canonical_dump() when building JSON for repo blocker reports

2024-01-09 - version 18
- #332 - Suppress additional checks when run with --check --no-leapp

2023-12-20 - version 17
- Encode blocked repos to assist with enabling support for future elevations

2023-12-11 - version 16
- Add repo allowance for vzzo custom migrations - ct-preset

2023-11-29 - version 15
- Enable powertools after upgrade
- Disable cpanel-plugins repo after upgrade for initial dnf update

2023-09-09 - version 14
- Use leapp answerfile instead of userchoices. Fixes #216
- Check MySQL status before starting upgrade. Fixes #287
- Vet digitalocean-agent repo.
- Vet elasticsearch-7.x repo.
- Fixup BootKernel error message. Fixes #305
- Add EA4-c$releasever to vetted repo list.
- Improve stop and disable function in Systemctl logic. Fixes #309
- cpanel-elevate stage 4 during mysql upgrade improved success detection. Fixes #311
- Add support for non-leapp upgrades. Fixes #302

2023-06-01 - version 13
- Clear Cpanel::OS' $instance cache after upgrade to rocky 8. Fixes false positive failure.
- Remove duped final_notifications display on final success.
- Add documentation fixes for NIC rename advice
- Pass through the "check only" mode status properly. - Fixes Linode upgrade failures.
- Fix for "Wide character warning"

2023-05-18 - version 12
- #170 - preserve and restore /etc/my.cnf after LEAPP upgrade and mysql restore.
- Fix MOTD message being blank due to fatpacker stripping it out.
- Assure LANG=C on all elevate systems.
- Add logic to autofix absolute symlinks in / which blocks leapp upgrades.
- If we run check-upgrade to a specific flavor, suggest to run the correct command.
- Fix bad getopt caller, that is delegated to cpev.
- Improved error message when calling missing functions.
- Impose maximum LTS version, change version recommendation to v110.
- Add new imunify repos to known list.
