@@ -1,6 +1,7 @@
 2024-??-?? - version 19
 - #337 - Add blocker if cPanel is not running version 110
 - Use canonical_dump() when building JSON for repo blocker reports
+- #348 - Incorporate running --check into running --start
 
 2024-01-09 - version 18
 - #332 - Suppress additional checks when run with --check --no-leapp
